# CKinematics

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  kinematics.cc  kinematics.h  test_functions.cc
