INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CKinematics_SRC kinematics.cc)
ADD_LIBRARY(CKinematics SHARED ${CKinematics_SRC})
TARGET_LINK_LIBRARIES(CKinematics ${LIBS})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} CKinematics)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(test_functions_SRC test_functions.cc)
  ADD_EXECUTABLE(test_functions ${test_functions_SRC})
  TARGET_LINK_LIBRARIES(test_functions CKinematics)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_functions)
  SET_TARGET_PROPERTIES(test_functions PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})
